@@ -1,3 +1,5 @@
+    - fixed cycle function to respect delimiter setting
+      after initial setting (Monte)
     - update $GLOBALS references to work properly with
       track_globals settings (Michal Prinke, Monte)
     - fixed bug in math function with call to assign
